[gd_scene load_steps=5 format=2]

[ext_resource path="res://scripts/simple/SimpleGameEntry.gd" type="Script" id=1]
[ext_resource path="res://fonts/GameTitle.tres" type="DynamicFont" id=2]
[ext_resource path="res://fonts/ArimoHeader.tres" type="DynamicFont" id=3]
[ext_resource path="res://themes/game-entry-notes-theme.tres" type="Theme" id=4]

[node name="SimpleGameEntry" type="VBoxContainer"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="GameNameContainer" type="VBoxContainer" parent="."]
margin_right = 600.0
margin_bottom = 74.0

[node name="GameNameLabel" type="Label" parent="GameNameContainer"]
margin_right = 600.0
margin_bottom = 46.0
custom_fonts/font = ExtResource( 2 )
text = "GAME NAME"

[node name="GameStudioLabel" type="Label" parent="GameNameContainer"]
margin_top = 50.0
margin_right = 600.0
margin_bottom = 74.0
custom_fonts/font = ExtResource( 3 )
text = "GAME STUDIO"

[node name="Notes" type="TextEdit" parent="."]
margin_top = 78.0
margin_right = 600.0
margin_bottom = 178.0
rect_min_size = Vector2( 0, 100 )
size_flags_horizontal = 3
theme = ExtResource( 4 )
readonly = true
wrap_enabled = true
